--- a/src/01-starter.html
+++ b/src/01-starter.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>OJET v5 Starter Kit</title>
+    <link rel="stylesheet" href="../node_modules/@oracle/oraclejet/dist/css/alta/oj-alta.css">
 
     <script type="text/javascript" src="../node_modules/requirejs/require.js"></script>
     <script type="text/javascript" src="main.js"></script>
