Custom Component examples

--- a/src/09-jet-component-simple.html
+++ b/src/09-jet-component-simple.html
@@ -11,10 +11,10 @@
 
     <script>
       require(['ojs/ojcore', 'knockout', 'ojs/ojcomposite', 'ojs/ojknockout',
-        'jet-composites/simple-alert/loader'], function(oj, ko) {
+        'jet-composites/simple-cc/loader'], function(oj, ko) {
         $(() => ko.applyBindings({}));
       });
     </script>
-    <simple-alert></simple-alert>
+    <simple-cc></simple-cc>
   </body>
 </html>
