--- a/src/start.html
+++ b/src/start.html
@@ -8,6 +8,10 @@
     <h4>Custom Components</h4>
     <ul>
       <li><a href="problems/custom-components/simple-cc.html">Simple Custom Component</a></li>
+      <li><a href="problems/custom-components/simple-cc-props.html">Custom Component Properties</a></li>
+      <li><a href="problems/custom-components/simple-cc-events.html">Custom Component Events</a></li>
+      <li><a href="problems/custom-components/simple-cc-methods.html">Custom Component Methods</a></li>
+      <li><a href="problems/custom-components/simple-cc-slots.html">Custom Component Slots</a></li>
     </ul>
   </body>
 </html>
