--- a/src/start.html
+++ b/src/start.html
@@ -13,5 +13,18 @@
       <li><a href="problems/custom-components/simple-cc-methods.html">Custom Component Methods</a></li>
       <li><a href="problems/custom-components/simple-cc-slots.html">Custom Component Slots</a></li>
     </ul>
+
+
+    <h4>Validators</h4>
+    Oracle JET provides validator classes that enforce a validation rule on those input strings.
+    <ul>
+      <li><a href="problems/custom-components/simple-cc.html">Simple Validator</a></li>
+    </ul>
+
+    <h4>Converters</h4>
+    Oracle JET provides converter classes that convert user input strings into the data type expected by the application
+    <ul>
+      <li><a href="problems/custom-components/simple-cc.html">Number Converter</a></li>
+    </ul>
   </body>
 </html>
